<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/calcinput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/calcbg"
        android:padding="12dp"
        android:textSize="48sp"
        android:gravity="end|bottom"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_7"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_8"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_9"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btndivide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPerator"
            android:text="@string/div"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_4"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_5"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_6"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnmulti"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPerator"
            android:text="@string/multi"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_1"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_2"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_3"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnsub"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPerator"
            android:text="@string/sub"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onDig"
            android:text="@string/_0"
            />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnadd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onPerator"
            android:text="@string/add"
            />
        <Button
        android:layout_margin="2dp"
        android:id="@+id/btndeci"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:onClick="onDeci"
        android:text="@string/deci"
        />
        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnclr"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onClear"
            android:text="@string/clr"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/btnequal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onEqual"
            android:text="@string/equal"
            />
    </LinearLayout>

</LinearLayout>